[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BABMiner"
version = "1.0.0"
description = "A CLI tool for mining β-α-β protein motifs from PDB files"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Andre Lecona Buttelli", email = "andrelecon@elsi.jp"}
]
license = {text = "GNU General Public License v3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.79",
    "numpy>=1.19",
    "networkx>=2.5",
    "tqdm>=4.50",
]

[project.urls]
Homepage = "https://github.com/AndreLecona/BABMiner"
Repository = "https://github.com/AndreLecona/BABMiner.git"
Issues = "https://github.com/AndreLecona/BABMiner/issues"

[project.scripts]
babminer = "BABMiner.cli:main"
cleanpdb = "BABMiner.clean_pdbs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["BABMiner*"]
